# gom-app

./: .gitignore  README.md  com.github.plasmus777.GpuOffloadingManager.json~  meson.build  plasmus777.github.GpuOffloadingManager.json  plasmus777.gnome.GpuOffloadingManager.json  plasmus777.gnome.GpuOffloadingManager.json~
data/: com.github.plasmus777.GpuOffloadingManager.appdata.xml.in  com.github.plasmus777.GpuOffloadingManager.desktop.in  com.github.plasmus777.GpuOffloadingManager.gschema.xml  meson.build  plasmus777.github.GpuOffloadingManager.appdata.xml.in  plasmus777.github.GpuOffloadingManager.desktop.in  plasmus777.github.GpuOffloadingManager.gschema.xml  plasmus777.gnome.GpuOffloadingManager.appdata.xml.in  plasmus777.gnome.GpuOffloadingManager.desktop.in  plasmus777.gnome.GpuOffloadingManager.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
snap/: snapcraft.yaml
snap/gui/: gom-app.desktop  plasmus777.github.GpuOffloadingManager.desktop
src/: config.py  gom-app-application.c  gom-app-application.h  gom-app-window.c  gom-app-window.ui  gom-app.gresource.xml  gom-app.in  handler_action.py  main.c  main.py  meson.build  notify.py  window.py
src/ui/: gom-app-window.ui  window.ui
src/ui/app/: gom-app-window.c  gom-app-window.h  gom-app-window.ui
